Рефактор примера с графическими фигурами. Создан отдельный класс для кэширования аннотированных методов фигур.