@@ -15,15 +15,16 @@ import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Stream;
 import javax.json.bind.Jsonb;
 import javax.json.bind.JsonbBuilder;
 import javax.json.bind.JsonbConfig;
@@ -44,6 +45,7 @@ import ru.lionsoft.javase.hello.gui.shapes.Line;
 import ru.lionsoft.javase.hello.gui.shapes.Oval;
 import ru.lionsoft.javase.hello.gui.shapes.Rectangle;
 import ru.lionsoft.javase.hello.gui.shapes.Text;
+import ru.lionsoft.javase.hello.gui.util.AnnotatedMethodCache;
 import ru.lionsoft.javase.hello.xml.jaxb.ShapeXmlRoot;
 
 /**
@@ -61,8 +63,7 @@ public class TestJsonGUI extends JComponent {
     private final List<ShapeDraw> shapes = new ArrayList<>();
     
     // Кэш для списка аннотированных методов классов фигур
-    private final Map<Class, List<Method>> preMethods = new HashMap<>();
-    private final Map<Class, List<Method>> postMethods = new HashMap<>();
+    private final AnnotatedMethodCache cache = new AnnotatedMethodCache();
 
     /**
      * Конструктор по умолчанию для инициализации фигур
@@ -76,13 +77,13 @@ public class TestJsonGUI extends JComponent {
         shapes.add(new Line(Color.MAGENTA, 10, 10, 50, 20));
         shapes.add(new Rectangle(Color.BLUE, 200, 200, 150, 80));
         shapes.add(new FillRectangle(Color.CYAN, 210, 210, 130, 60));
-        shapes.add(new Oval(Color.DARK_GRAY, 450, 100, 150, 120));
-        shapes.add(new FillOval(Color.PINK, 450, 100, 130, 100));
+        shapes.add(new Oval(Color.DARK_GRAY, 450, 300, 150, 120));
+        shapes.add(new FillOval(Color.PINK, 450, 300, 130, 100));
         shapes.add(new Text(Color.BLUE, 410, 110, "Виват Цезарь!"));
         shapes.add(new Text(Color.DARK_GRAY, 420, 130, "Виват Император!"));
-        shapes.add(new Text(new Color(128, 255, 64), 30, 150, "Привет Мир!"));
-        shapes.add(new Circle(new Color(64, 128, 255), 130, 70, 40));
-        shapes.add(new FillCircle(new Color(128, 192, 128), 130, 70, 30));
+        shapes.add(new Text(new Color(128, 255, 64), 430, 150, "Привет Мир!"));
+        shapes.add(new Circle(new Color(64, 128, 255), 130, 270, 40));
+        shapes.add(new FillCircle(new Color(128, 192, 128), 130, 270, 30));
 
         // Читаем фигуры из файла в формате JSON, если есть
         File shapesFile = new File("shapes.json");
@@ -142,7 +143,7 @@ public class TestJsonGUI extends JComponent {
             
             // **** Подготовка к рисованию ****
             // Вызываем аннотированные @PostDraw методы
-            callAnnotationMethodsForShape(preMethods, shape, g);
+            cache.invokeAnnodatedMethods(shape, PreDraw.class, g);
             // before JDK8 - надо проверять реализацию интерфейса
             if (shape instanceof ShapeDrawCallback) {
                 System.out.println("@@@@ call ShapeDrawCallback.preDraw()!");
@@ -164,7 +165,7 @@ public class TestJsonGUI extends JComponent {
                 ((ShapeDrawCallback)shape).postDraw(g);
             }
             // Вызываем аннотированные @PostDraw методы
-            callAnnotationMethodsForShape(postMethods, shape, g);
+            cache.invokeAnnodatedMethods(shape, PostDraw.class, g);
         }
     }
     
@@ -173,69 +174,21 @@ public class TestJsonGUI extends JComponent {
      */
     private void analyzeAnnotationForShapes() {
         System.out.println("@@@@ analyze annotation methods");
-        for (Object obj : shapes) {
-            if (obj == null) continue; // пропускаем
+        Stream.of(shapes)
+                .filter((shape) -> shape != null) // skip null
+                .map((shape) -> shape.getClass()) // ShapeDraw -> Class
+                .distinct()                       // skip duplicate class
+                .forEach((clazz) -> cache.add(clazz, PreDraw.class, PostDraw.class));
 
-            final Class objClass = obj.getClass();
-            // Если в словаре есть описание класса, то анализировать не нужно повторно
-            if (preMethods.containsKey(objClass) || postMethods.containsKey(objClass))
-                continue;
-
-            // Перебираем все публичные методы объекта
-            for (Method method : objClass.getMethods()) {
-                // @PreDraw
-                PreDraw preDraw = method.getAnnotation(PreDraw.class);
-                if (preDraw != null) {
-                    // Метод аннотирован @PreDraw
-                    addMethodToMap(preMethods, objClass, method);
-                }
-                // @PostDraw
-                PostDraw postDraw = method.getAnnotation(PostDraw.class);
-                if (postDraw != null) {
-                    // Метод аннотирован @PostDraw
-                    addMethodToMap(postMethods, objClass, method);
-                }
+        // Сортируем методы по аттрибуту 'order' аннотаций PreDraw и PostDraw
+        cache.sortAnnotatedMethods(PreDraw.class, new Comparator<Method>() {
+            @Override
+            public int compare(Method m1, Method m2) {
+                return m1.getAnnotation(PreDraw.class).order() - m2.getAnnotation(PreDraw.class).order();
             }
-        }
-    }
-
-    /**
-     * Метод добавления метода в словарь
-     * @param map словарь ассоциаций списка методов с классом
-     * @param key ссылка на класс (ключ словаря)
-     * @param value ссылка на метод (значение для добавления в список словаря)
-     */
-    private void addMethodToMap(Map<Class, List<Method>> map, Class key, Method value) {
-        List<Method> list = map.get(key);
-        if (list == null) {
-            // Не было еще ассоциации - создаем новый список методов
-            list = new ArrayList<>();
-            map.put(key, list);
-        }
-        list.add(value);
-    }
-
-    /**
-     * Метод вызова callback методов для фигуры (объекта)
-     * @param map ссылка на словарь списка анотированных методов для классов
-     * @param obj ссылка на фигуру
-     * @param g графический контекст для передачи в метод в качестве параметра
-     */
-    private void callAnnotationMethodsForShape(Map<Class, List<Method>> map, Object obj, Graphics g) {
-        // Получаем список анотированных методов для класса
-        List<Method> methods = map.get(obj.getClass());
-        // Если нет анотированных методов - выход
-        if (methods == null) return; 
-        // Перебираем все анотированные методы
-        for (Method method : methods) {
-            try {
-                // Вызываем анотированный метод для фигуры (объекта) и передаем параметр на графический контекст
-                System.out.println("invoke Annotation Method: " + method.toGenericString());
-                method.invoke(obj, g);
-            } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
-                LOG.log(Level.SEVERE, "Invoke Method", ex);
-            }
-        } 
+        });
+        cache.sortAnnotatedMethods(PostDraw.class,
+                (m1, m2) -> m1.getAnnotation(PostDraw.class).order() - m2.getAnnotation(PostDraw.class).order());
     }
 
     /**
@@ -249,6 +202,8 @@ public class TestJsonGUI extends JComponent {
         int lines = 0; // кол-во линий
         int rects = 0; // кол-во прямоугольников
         int ovals = 0; // кол-во овалов
+        int texts = 0; // кол-во текстовых строк
+        int fills = 0; // кол-во зкарашенных фигур
         Map<Color, Integer> colors = new HashMap<>(); // счетчики для каждого цвета
         
         // Перебираем все фигуры
@@ -258,6 +213,7 @@ public class TestJsonGUI extends JComponent {
             if (shape == null) continue;
              
             count++;
+            
             if (shape instanceof Line) {
                 Line line = (Line)shape;
                 System.out.println("Анализируем " + line.getClass().getSimpleName());
@@ -268,31 +224,45 @@ public class TestJsonGUI extends JComponent {
                 Integer cnt = colors.get(color);
                 colors.put(color, (cnt == null ? 1 : cnt++));
             }
+            
             if (shape instanceof ShapeParameter) {
                 ShapeParameter param = (ShapeParameter) shape;
                 System.out.println("Анализируем " + param.getType());
                 // Square
                 sumSquare += param.getPerimeter() * 1;
                 if (param.isFill()) {
+                    fills++;
                     // Фигура закрашена то добавляем площадь
                     sumSquare += param.getSquare();
                 }
                 // Type
                 switch (param.getShapeType()) {
-                    case LINE:
+                    case Line:
                         lines++;
                         break;
                         
-                    case RECTANGLE:
-                    case SQUARE:
+                    case Rectangle:
+                    case Square:
                         rects++;
                         break;
                         
-                    case OVAL:
-                    case CIRCLE:
+                    case Oval:
+                    case Circle:
                         ovals++;
                         break;
+                        
+                    case Text:
+                        texts++;
+                        break;
                 }
+                // JDK12+ (--enable-preview)
+//                switch (param.getShapeType()) {
+//                    case Line              -> lines++;
+//                    case Rectangle, Square -> rects++;
+//                    case Oval, Circle      -> ovals++;
+//                    case Text              -> texts++;
+//                }
+
                 // Color
                 Color color = param.getColor();
                 Integer cnt = colors.get(color);
@@ -305,6 +275,8 @@ public class TestJsonGUI extends JComponent {
         System.out.println("lines = " + lines);
         System.out.println("rects = " + rects);
         System.out.println("ovals = " + ovals);
+        System.out.println("texts = " + texts);
+        System.out.println("fills = " + fills);
         System.out.println("colors = " + colors);
     }
 
